[Home]

Summary:ASTERISK-28238: PJSIP realtime. getcontext not working with DUNDI
Reporter:Ray (rainolf)Labels:pjsip
Date Opened:2019-01-10 15:10:29.000-0600Date Closed:2019-02-05 08:49:57.000-0600
Priority:MinorRegression?
Status:Closed/CompleteComponents:Channels/chan_pjsip
Versions:16.1.1 Frequency of
Occurrence
Constant
Related
Issues:
is related toASTERISK-28258 DUNDi Does Not Register chan_pjsip Realtime Endpoints On Register
Environment:Debian 9 with Asterisk 16.1.1Attachments:
Description:Pjsip.conf

regcontext directive does not work as expected compared with chan_sip.

It does not create dynamically the context and NoOp based on registered extensions.

The only way we have to let other pbx make correctly a DUNDI lokkup is to create a static context and NoOP for each extension.

Comments:By: Asterisk Team (asteriskteam) 2019-01-10 15:10:30.256-0600

Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution.

A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report.

Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process].

Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur.

By: Kevin Harwell (kharwell) 2019-01-15 17:53:44.277-0600

Turns out the context specified by 'regcontext' was not being created.

By: Ross Beer (rossbeer) 2019-01-18 06:23:12.948-0600

The patch appears to create the context now, but when an endpoint registers it is not added to the context if the endpoint is defined in realtime. Endpoints defined in pjsip.conf are added.

I have tested the proposed patch in asterisk 13 GIT

By: Friendly Automation (friendly-automation) 2019-02-05 08:49:58.553-0600

Change 10881 merged by Friendly Automation:
pjsip/config_global: regcontext context not created

[https://gerrit.asterisk.org/10881|https://gerrit.asterisk.org/10881]

By: Friendly Automation (friendly-automation) 2019-02-05 09:56:47.945-0600

Change 10879 merged by George Joseph:
pjsip/config_global: regcontext context not created

[https://gerrit.asterisk.org/10879|https://gerrit.asterisk.org/10879]

By: Friendly Automation (friendly-automation) 2019-02-05 09:57:06.543-0600

Change 10880 merged by George Joseph:
pjsip/config_global: regcontext context not created

[https://gerrit.asterisk.org/10880|https://gerrit.asterisk.org/10880]